# integrity-cli

./: .gitignore  README.md  pyproject.toml
docs/: CLI_REFERENCE.md
integrity_cli/: client.py  config.py  main.py
