[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrity-cli"
version = "2.0.0"
description = "Fleet Command-and-Control for the Integrity Protocol"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.28.0",
]

[project.scripts]
integrity = "integrity_cli.main:app"
